[gd_scene load_steps=7 format=3 uid="uid://bduuk3f0sg3op"]

[ext_resource type="Script" path="res://Scripts/GameLogic/modifier.gd" id="1_wxg3c"]
[ext_resource type="AudioStream" uid="uid://cbnkxanfcovqh" path="res://Sounds/Sound_Effects/shatter.mp3" id="2_17ynx"]
[ext_resource type="AudioStream" uid="uid://bh2ww0bjnrnw1" path="res://Sounds/Sound_Effects/unshatter.mp3" id="3_apjfh"]

[sub_resource type="Animation" id="Animation_anf3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xt4kd"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.517647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hudy"]
_data = {
"RESET": SubResource("Animation_anf3q"),
"fade": SubResource("Animation_xt4kd")
}

[node name="modifier" type="Node2D"]
modulate = Color(1, 1, 1, 0)
z_index = 300
scale = Vector2(0.3, 0.3)
script = ExtResource("1_wxg3c")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(15, -23, 15, 23, -15, 23, -15, -23)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8hudy")
}

[node name="break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_17ynx")
volume_db = -6.753

[node name="repair" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_apjfh")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="break" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="finished" from="repair" to="." method="_on_repair_finished"]
